--- a/index.html
+++ b/index.html
@@ -6,16 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Where Should I Be Right Now?</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
-        <h1 class="text-center">schedule</h1>
+        <h1 class="text-center">Where Should I Be Right Now?</h1>
 
         <div class="form-group">
             <label for="dayInput">Select Day (A-G):</label>
             <input type="text" id="dayInput" class="form-control" placeholder="Enter your letter day:">
-            <button id="submitDay" class="btn btn-primary mt-2">Show Schedule</button>
+            <button id="submitDay" class="btn btn-dark mt-2">Show Schedule</button>
         </div>
+
         <div class="schedule">
             <h3 class="text-center">Your Schedule for the Day</h3>
             <table class="table table-bordered table-striped">
