CHAPTER 3 - started on CSS

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Where Should I Be Right Now?</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lacquer&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -20,7 +23,7 @@
 
         <div class="schedule">
             <h3 class="text-center">Your Schedule for the Day</h3>
-            <table class="table table-bordered table-striped">
+            <table class="table table-bordered table-striped text-white">
                 <thead>
                     <tr>
                         <th>Period</th>
